chuong mai cx het bug